# soda

./: .gitignore  Cargo.toml  README.md  keys.sh
axle/: Cargo.toml
axle-waffle/: Cargo.toml
axle-waffle/src/: export.rs  import.rs  lib.rs
axle/src/: builder.rs  lib.rs  rewrite.rs  transform.rs
binaryen-js-rs/: Cargo.toml
binaryen-js-rs/src/: build.sh
blitz-p2p/: Cargo.toml
blitz-p2p/src/: lib.rs  packet.rs  socket.rs
csyncify/: Cargo.toml
csyncify/src/: lib.rs
embedded-io-convert/: Cargo.toml
embedded-io-convert/src/: lib.rs  mutex.rs  read.rs  seek.rs  write.rs
kaggle/: Cargo.toml
kaggle/src/: main.rs
mars/: Cargo.toml
mars/src/: lib.rs
more-waffle/: Cargo.toml
more-waffle/src/: lib.rs  link.rs  obfuscate.rs  passes.rs  render.rs  tcore.rs  untco.rs
more-waffle/src/copying/: block.rs  func.rs  module.rs
more-waffle/src/obfuscate/: cff.rs
more-waffle/src/passes/: mem_fusing.rs  reorder_funs.rs  splice.rs  unmem.rs  unswitch.rs
neeluj/nlj-core/: Cargo.toml  build.sh
neeluj/nlj-core/src/: lib.rs  quinify.rs  wars.rs
neeluj/nlj-ic-core/: Cargo.toml
neeluj/nlj-ic-core/src/: main.rs
neeluj/nlj-x/: Cargo.toml
neeluj/nlj-x/src/: lib.rs  malloc.rs  syscall.rs
neeluj/paxel-common/: Cargo.toml
neeluj/paxel-common/src/: lib.rs
neeluj/paxel-src/: Cargo.toml  build.sh
neeluj/paxel-src-macro/: Cargo.toml
neeluj/paxel-src-macro-core/: Cargo.toml
neeluj/paxel-src-macro-core/src/: lib.rs
neeluj/paxel-src/src/: lib.rs
neeluj/paxel-wars/: Cargo.toml
neeluj/paxel-wars-core/: Cargo.toml  build.sh
neeluj/paxel-wars-core/src/: lib.rs
portal-fs/: Cargo.toml
portal-fs/src/: lib.rs
quinify2/: Cargo.toml
quinify2/src/: lib.rs
simple-encryption/: Cargo.toml
simple-encryption/src/: lib.rs
skippy/conosiin-proto/: Cargo.toml
skippy/conosiin-proto/src/: lib.rs  tor.rs
skippy/libprobe/: Cargo.toml
skippy/libprobe/src/: frontend.rs  lib.rs  rust.rs
syn-serde-struct/: Cargo.toml
syn-serde-struct/src/: lib.rs
waffle-ic/: Cargo.toml
waffle-ic/src/: lib.rs
wappy/wappy-proto/: Cargo.toml
wappy/wappy-wasm/: Cargo.toml
wappy/wappy-wasm/src/: lib.rs
wars/: Cargo.toml
wars-core/: Cargo.toml
wars-core/src/: lib.rs
wars/src/: lib.rs
wars/tests/: b.rs.bak
wasm-async-layer/: Cargo.toml
wasm-async-layer/src/: lib.rs
