[workspace]
members=["axle","simple-encryption","blitz-p2p","embedded-io-convert","wars","wars-core", "more-waffle","waffle-ic","csyncify","wasm-async-layer", "axle-waffle", "binaryen-js-rs", "syn-serde-struct", "quinify2", "neeluj/nlj-ic-core", "neeluj/nlj-core", "neeluj/nlj-x","portal-fs", "mars", "skippy/libprobe", "skippy/conosiin-proto", "wappy/wappy-proto", "wappy/wappy-wasm", "kaggle"]
resolver="2"

[workspace.dependencies]
waffle = {git="https://github.com/portal-co/waffle-.git",branch="pr/changes2"}

anyhow = "1.0.79"
indexmap = "2.1.0"
id-arena = "2.2.1"
ed25519-dalek = "2"
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10.1"
curve25519-dalek = "4.1.1"
rand = "0.8.5"
thiserror = "1.0.56"
merge-io = "0.3.0"
async-trait = "0.1.77"
dyn-clone = "1.0.16"
embedded-io-async = "0.6.1"
futures = "0.3.30"
embedded-io-convert={path="./embedded-io-convert"}
minicoroutine = "0.1.3"
pasts = "0.14.3"
csyncify={path="./csyncify"}
expander = "2.0.0"
sha3 = "0.10.8"
wars-core={path="./wars-core"}
wars={path="./wars"}
portal-fs={path="./portal-fs"}
once_cell = "1.19.0"
bimap = "0.6.3"


wappy-proto={path="./wappy/wappy-proto"}
wappy-wasm={path="./wappy/wappy-wasm"}

serde = { version = "1.0", features = ["derive"] }
simple-encryption={path="./simple-encryption"}
whisk = "0.12.0"
blitz-p2p={path="./blitz-p2p"}
embedded-io-adapters = {version="0.6.1",features=["futures-03"]}
more-waffle={path="./more-waffle"}
waffle-ic={path="./waffle-ic"}
postcard = {version="1.0.8",features=["alloc"]}

wasmi = "0.31.1"
wasm_runtime_layer = { version = "0.2.1", features = [ "backend_wasmi" ] }
wasm-async-layer={path="./wasm-async-layer"}

syn-serde = { version = "0.3", features = ["json"] }
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0.78"
quote = "1.0.35"

libp2p = "0.53.2"
libp2p-stream = "0.1.0-alpha"

iroh-net = "0.12.0"
quinn = "=0.10.2"

ic-wasi-polyfill={git="https://github.com/wasm-forge/ic-wasi-polyfill.git"}
nlj-core={path="./neeluj/nlj-core"}
ic-cdk = "0.12.1"

arti-client = {version="0.14.1",features=["onion-service-service","onion-service-client"]}
tor-hsservice = "=0.8.0"
tor-rtcompat = "=0.10.0"
tor-cell = "0.16.1"
tor-hscrypto = "0.6.1"

[profile.release]
strip = "debuginfo"
