[package]
name = "blitz-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dyn-clone.workspace = true
embedded-io-async.workspace = true
embedded-io-convert.workspace = true
futures.workspace = true
merge-io.workspace = true
pasts.workspace = true
rand.workspace = true

serde.workspace = true
sha3.workspace = true
simple-encryption.workspace = true
sluice = "0.5.5"
whisk.workspace = true
