[package]
name = "embedded-io-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-io-adapters.workspace = true
embedded-io-async.workspace = true
futures.workspace = true
merge-io.workspace = true
pin-project = "1.1.3"
