[package]
name = "portal-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
embedded-io-async.workspace = true
embedded-io-convert.workspace = true
futures.workspace = true
