[package]
name = "wars-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true

more-waffle.workspace = true
proc-macro2.workspace = true
quote.workspace = true

# bulk-memory-lowering.workspace = true

sha3.workspace = true
syn.workspace = true


waffle.workspace = true
