[package]
name = "wars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
expander.workspace = true
litrs = "0.4.1"
proc-macro2 = "1.0.72"
quote = "1.0.34"
sha3.workspace = true
syn = "2.0.43"
wars-core.workspace = true

[lib]
proc-macro = true

[features]
no-file-expansion=[]
