[package]
name = "paxel-src-macro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
paxel-common.workspace = true
postcard.workspace = true
proc-macro2.workspace = true
quote.workspace = true
sha3.workspace = true
syn.workspace = true
