[package]
name = "paxel-src-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
paxel-src-macro-core = { version = "0.1.0", path = "../paxel-src-macro-core" }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lib]
proc-macro = true