[package]
name = "paxel-wars-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
paxel-common.workspace = true
postcard.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
syn.workspace = true
syn-serde-struct = { version = "0.1.0", path = "../../syn-serde-struct" }


waffle.workspace = true
wars-core.workspace = true
# async-trait = "0.1.77"
# paste = "1.0.14"
# wars.workspace = true
