[package]
name = "libprobe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axle = { version = "0.1.0", path = "../../axle" }
bimap.workspace = true
id-arena = "2.2.1"
indexmap.workspace = true
paste = "1.0.14"
proc-macro2 = "1.0.78"
quote.workspace = true
syn.workspace = true
